Initial edits to get baseline code up and running

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,7 +7,7 @@
   %p
     Welcome to the Ohana API developer portal!
   %p
-    This particular instance of the API exposes information about various human services providers in [insert your city/County/Community].
+    This particular instance of the API exposes information about various human services providers in Greenville, South Carolina.
   %p
     We want you to build something that will connect underprivileged residents with the help they need (food, shelter, medical care, etc.). Read the #{link_to "documentation", docs_url} to learn more.
   %p
